CAMEL-10141 make CXF code gen plugin work on JAVA 9